@@ -58,7 +58,7 @@ will be sent back to the client.
 The file is divided into sections, delimited by "[name]" lines.
 A section name can be either an operating system identifier - 
 linux, solaris, hp-ux, aix, freebsd, openbsd, netbsd, darwin - 
-or a hostname. When deciding which section to send to a client,
+a class, or a hostname. When deciding which section to send to a client,
 Xymon will first look for a section named after the hostname of
 the client; if such a section does not exist, it will look for
 a section named by the operating system of the client. So you
@@ -96,7 +96,8 @@ is usually an explicit full-path filename on the client. If it is enclosed
 in backticks, it is a command which the Xymon client runs and each line 
 of output from this command is then used as a filename. This allows
 scripting which files to monitor, e.g. if you have logfiles that are
-named with some sort of timestamp.
+named with some sort of timestamp. If FILENAME is enclosed in angle brackets
+it is treated as a glob and passed through the local glob(3) function first.
 .sp
 The \fBignore PATTERN\fR line (optional) defines lines in the logfile which
 are ignored entirely, i.e. they are stripped from the logfile data before
@@ -150,27 +151,24 @@ and any sub-directories. It looks like this:
 .sp
 The \fBdir:DIRECTORYNAME\fR line defines the filename of the file to monitor.
 As with the "log:" entries, a filename enclosed in backticks means a 
-command which will generate the filenames dynamically. The Xymon client
+command which will generate the filenames dynamically and a filename enclosed 
+in angle brackets will be treated as a fileglob. The Xymon client
 will run the
 .I du(1)
 command with the directoryname as parameter, and send the output back to the
 Xymon server.
 .br
 \fBNOTE:\fR If you want to check multiple directories using a 
-wildcard, you \fBmust\fR use a command to generate the directory names. Putting 
-wildcards directly into the \fBdir:\fR entry will not work. E.g. use something
-like
+wildcard, you \fBmust\fR use a command or glob to generate the directory names. 
+Putting wildcards directly into the \fBdir:\fR entry will not work. E.g. use 
+something like
 .br
 	dir:`find /var/log \-maxdepth 1 \-type d`
 
 The "du" command used can be configured through the \fBDU\fR environment 
-variable. On some systems, by default \fBdu\fR reports data in disk blocks
-instead of KB (e.g. Solaris). So you may want to configure the Xymon client
-to use a \fBdu\fR command which reports data in KB, e.g. by setting
-.br
-    DU="du \-k"
-.br
-in the xymonclient.cfg file.
+variable in the xymonclient.cfg file if needed. If not specified, \fBdu \-k\fR 
+is used, as on some systems by default \fBdu\fR reports data in disk blocks 
+instead of KB (e.g. Solaris). 
 
 .SH NOTES
 The ability of the Xymon client to calculate file hashes and monitor those
