@@ -22,6 +22,8 @@ xymon (4.3.25) stable; urgency=high
    * xymonclient: Allow LOCALMODE to be set in xymonclient.cfg w/o passing --local option
    * logfetch: Add --noexec option to ignore commands to dynamically list files
      for scanning (Suggested by Jeremy Laidman)                                      
+   * Add file globbing capabilities to logfetch to avoid need to fork commands      
+     to create dynamic lists (Suggested by Jeremy Laidman)
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  XXX, XX Jan 2016 08:00:00 -0800
 
